# ScyllaChess

./: .clang-format  .cmake-format.py  .gdbinit  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md  competition_rules.md
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot.yml  linter.yaml  precommit-update.yml  runtests.yaml
include/: bitboard.hpp  square.hpp
include/scylla/: bitboard.hpp  chessboard.hpp  game.hpp  random.hpp  square.hpp  util.hpp
include/scylla/chess_types/: file.hpp  rank.hpp  square.hpp  util.hpp
include/scylla/core/: file.hpp  rank.hpp  square.hpp
include/scylla/masks/: helpers.hpp  maskgen.hpp  maskgen_rook.hpp  masks.hpp
include/scylla/masks/maskgen/: antidiagonal.hpp  diagonal.hpp  file.hpp  king.hpp  knight.hpp  pawn.hpp  rank.hpp
include/scylla/parsing/: fen.hpp  pgn.hpp
rust/: Cargo.toml
rust/src/: bitboard.rs  main.rs
src/: bitboard.rs  main.cpp  main.rs  temp.cpp
tests/: CMakeLists.txt  bitboard_tests.cpp  square_tests.cpp
